--- a/index.html
+++ b/index.html
@@ -9,25 +9,26 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#works">Works</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#works">Works</a></li>
+            </ul>
+        </nav>
     </header>
     <section>
-        <h1>Welcome to my website protfolio</h1>
+        <h1>Welcome to my website portfolio</h1>
         <p>This is where i’m gonna put all my works and some ideas that i want to share with de world. Also i’m gonna put som of my social medias so we can get in touch.</p>
     </section>
     <footer>
-        <p>2022 © All rights reserved.</p>
+        <p>Emmanuel Gomez 2022 © All rights reserved.</p>
         <div>
             <a href="#"><img src="./img/Linkedin.svg" alt="Linkedin"></a>
             <a href="#"><img src="./img/Github.svg" alt="Github"></a>
             <a href="#"><img src="./img/Behance.svg" alt="Behance"></a>
         </div>
     </footer>
-    
 </body>
 <script src="./main.js"></script>
 </html>
