--- a/_about.html
+++ b/_about.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Portfolio</title>
+    <title>About</title>
 </head>
 <body>
-    <!-- /*eagomez.com*/ -->
     <header>
         <nav>
             <ul>
@@ -18,9 +17,20 @@
             </ul>
         </nav>
     </header>
-    <section class="section--home" id="home">
-        <h1>Welcome to my website portfolio</h1>
-        <p>This is where i’m gonna put all my works and some ideas that i want to share with de world. Also i’m gonna put som of my social medias so we can get in touch.</p>
+    <section class="section--about" id="about">
+        <div>
+            <h2>Who I am</h2>
+            <img src="./img/undraw_hello_re_3evm.svg" alt="about-mobile" class="d-none">
+            <p>  Hey! I am Emmanuel Gomez, a 22 year old React frontend developer who is discovering the world of web development. I started this road almost a year ago and it’s been an awesome time working and learning about this amazing career. <br/>
+                I like to help make people life’s easier throught the browser, working with designers and bringing ideas to life. I’m naturally curious and always learning something.<br/>
+                I have experience working with HTML, Css3, Sass, Bootstrap, JavaScript, React.js, PHP and his framework Laravel.
+               
+               
+               </p>
+            <h4>If you are interested on collaborating or just talk </h4>
+            <button id="contactButton">Start a conversation</button>
+        </div>
+        <img src="./img/undraw_hello_re_3evm.svg" alt="about">
     </section>
     <footer>
         <p>Emmanuel Gomez 2022 © All rights reserved.</p>
