--- a/_about.html
+++ b/_about.html
@@ -11,24 +11,42 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./_about.html">About</a></li>
-                <li><a href="./_works.html">Works</a></li>
+                <li>
+                    <a href="./index.html">
+                        <span><img src="./img/home icon.svg" alt="home"></span>
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="./_about.html">
+                        <span><img src="./img/about icon.svg" alt="about"></span>
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a href="./_works.html">
+                        <span><img src="./img/work icon.svg" alt="work"></span>
+                        Works
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
     <section class="section--about" id="about">
         <div>
             <h2>Who I am</h2>
-            <img src="./img/undraw_hello_re_3evm.svg" alt="about-mobile" class="d-none">
-            <p>  Hey! I am Emmanuel Gomez, a 22 year old React frontend developer who is discovering the world of web development. I started this road almost a year ago and it’s been an awesome time working and learning about this amazing career. <br/>
-                I like to help make people life’s easier throught the browser, working with designers and bringing ideas to life. I’m naturally curious and always learning something.<br/>
-                I have experience working with HTML, Css3, Sass, Bootstrap, JavaScript, React.js, PHP and his framework Laravel.
-               
-               
-               </p>
+            <img src="./img/undraw_hello_re_3evm.svg" alt="about-mobile">
+            <p>
+                Hey! I am Emmanuel Gomez, a 22 year old React frontend developer who is discovering the world of web development. I started this road almost a year ago and it’s been an awesome time working and learning about this amazing career.    
+            </p>
+            <p>
+                I'm trying to help people making life easier through the browser, working with designers and bringing ideas to life. I’m naturally curious and always learning something.
+            </p>
+            <p>
+                I have experience working with HTML5, Css3, Sass, Bootstrap, JavaScript, React.js, PHP and the framework Laravel.
+            </p>
             <h4>If you are interested on collaborating or just talk </h4>
-            <button id="contactButton">Start a conversation</button>
+            <a href="./_contact.html"><button id="contactButton"><span>Start a conversation</span></button></a>
         </div>
         <img src="./img/undraw_hello_re_3evm.svg" alt="about">
     </section>
