--- a/_works.html
+++ b/_works.html
@@ -11,9 +11,24 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./_about.html">About</a></li>
-                <li><a href="./_works.html">Works</a></li>
+                <li>
+                    <a href="./index.html">
+                        <span><img src="./img/home icon.svg" alt="home"></span>
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="./_about.html">
+                        <span><img src="./img/about icon.svg" alt="about"></span>
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a href="./_works.html">
+                        <span><img src="./img/work icon.svg" alt="work"></span>
+                        Works
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -21,30 +36,30 @@
         <h2>Let’s see some of my own projects</h2>
         <div class="works--container">
             <div>
-                <div class="works--project__course">
-                    <h4>Project course</h4>
+                <div class="works--img__right">
+                    <h4>Landing Page</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet lacus, tincidunt metus, morbi. Dolor metus, penatibus neque, consequat. Rutrum porttitor vestibulum morbi odio ut donec. Duis gravida sed malesuada pretium scelerisque nibh. Eu, vulputate eget est mi blandit congue eget nunc. </p>
                 </div>
                 <a href="https://egmyapp.herokuapp.com/" target="_blank"><img src="./img/9e3bd8127399839.614113df90751.png" alt="projectImg"></a>
             </div>
             <div>
-                <a href=""><img src="./img/Captura de pantalla (13).png" alt="soonImg"></a>
-                <div class="works--project__todo">
-                    <h4>To do List</h4>
+                <a href="https://egmundoseapi.herokuapp.com/" target="_blank"><img src="./img/Api mundosE.png" alt="soonImg"></a>
+                <div class="works--img__left">
+                    <h4>Api</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet lacus, tincidunt metus, morbi. Dolor metus, penatibus neque, consequat. Rutrum porttitor vestibulum morbi odio ut donec. Duis gravida sed malesuada pretium scelerisque nibh. Eu, vulputate eget est mi blandit congue eget nunc. </p>
                 </div>
             </div>
             <div>
-                <div class="works--project__calc">
+                <div class="works--img__right">
                     <h4>Simple Calculator</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet lacus, tincidunt metus, morbi. Dolor metus, penatibus neque, consequat. Rutrum porttitor vestibulum morbi odio ut donec. Duis gravida sed malesuada pretium scelerisque nibh. Eu, vulputate eget est mi blandit congue eget nunc. </p>
                 </div>
                 <a href=""><img src="./img/Captura de pantalla (13).png" alt="soonImg"></a>
             </div>
             <div>
-                <a href="https://egmundoseapi.herokuapp.com/" target="_blank"><img src="./img/Api mundosE.png" alt="soonImg"></a>
-                <div class="works--project__api">
-                    <h4>Api</h4>
+                <a href=""><img src="./img/Captura de pantalla (13).png" alt="soonImg"></a>
+                <div class="works--img__left">
+                    <h4>To do List</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet lacus, tincidunt metus, morbi. Dolor metus, penatibus neque, consequat. Rutrum porttitor vestibulum morbi odio ut donec. Duis gravida sed malesuada pretium scelerisque nibh. Eu, vulputate eget est mi blandit congue eget nunc. </p>
                 </div>
             </div>
