--- a/index.html
+++ b/index.html
@@ -11,9 +11,24 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./_about.html">About</a></li>
-                <li><a href="./_works.html">Works</a></li>
+                <li>
+                    <a href="./index.html">
+                        <span><img src="./img/home icon.svg" alt="home"></span>
+                        Home
+                    </a>
+                </li>
+                <li>
+                    <a href="./_about.html">
+                        <span><img src="./img/about icon.svg" alt="about"></span>
+                        About
+                    </a>
+                </li>
+                <li>
+                    <a href="./_works.html">
+                        <span><img src="./img/work icon.svg" alt="work"></span>
+                        Works
+                    </a>
+                </li>
             </ul>
         </nav>
     </header>
