--- a/_about.html
+++ b/_about.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>About</title>
+    <script type="text/javascript" src="./main.js"></script>
+    <title>About Me</title>
 </head>
 <body>
     <header>
@@ -13,26 +14,26 @@
             <ul>
                 <li>
                     <a href="./index.html">
-                        <span><img src="./img/home icon.svg" alt="home"></span>
+                        <span><img src="./img/homeIcon.svg" alt="home"></span>
                         Home
                     </a>
                 </li>
                 <li>
                     <a href="./_about.html">
-                        <span><img src="./img/about icon.svg" alt="about"></span>
+                        <span><img src="./img/aboutIcon.svg" alt="about"></span>
                         About
                     </a>
                 </li>
                 <li>
                     <a href="./_works.html">
-                        <span><img src="./img/work icon.svg" alt="work"></span>
+                        <span><img src="./img/workIcon.svg" alt="work"></span>
                         Works
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section class="section--about" id="about">
+    <section class="section__about" id="about">
         <div>
             <h2>Who I am</h2>
             <img src="./img/undraw_hello_re_3evm.svg" alt="about-mobile">
@@ -60,5 +61,4 @@
         </div>
     </footer>
 </body>
-<script src="./main.js"></script>
 </html>
