--- a/_contact.html
+++ b/_contact.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Contact</title>
+    <script type="text/javascript" src="./main.js"></script>
+    <title>Contact Me</title>
 </head>
 <body>
     <header>
@@ -13,37 +14,37 @@
             <ul>
                 <li>
                     <a href="./index.html">
-                        <span><img src="./img/home icon.svg" alt="home"></span>
+                        <span><img src="./img/homeIcon.svg" alt="home"></span>
                         Home
                     </a>
                 </li>
                 <li>
                     <a href="./_about.html">
-                        <span><img src="./img/about icon.svg" alt="about"></span>
+                        <span><img src="./img/aboutIcon.svg" alt="about"></span>
                         About
                     </a>
                 </li>
                 <li>
                     <a href="./_works.html">
-                        <span><img src="./img/work icon.svg" alt="work"></span>
+                        <span><img src="./img/workIcon.svg" alt="work"></span>
                         Works
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section class="section--contact" id="contact">
+    <section class="section__contact" id="contact">
         <div class="div__form">
             <form action="" method="post">
                 <label for="inputName" class="label--chl__1">
                     <input type="text" id="inputName" name="name" placeholder="Name" required>
                     <span>Name</span>
-                    <div class="validation">* Required</div>
+                    <!-- <div class="validation">* Required</div> -->
                 </label>
                 <label for="inputEmail" class="label--chl__2">
                     <input type="email" id="inputEmail" name="email" placeholder="Email" required>
                     <span>Email</span>
-                    <div class="validation">* Required</div>
+                    <!-- <div class="validation">* Required</div> -->
                 </label>
                 <label for="inputTel" class="label--chl__3">
                     <input type="tel" id="inputTel" name="phone" placeholder="Phone">
@@ -52,13 +53,13 @@
                 <label for="inputMessage" class="label--chl__4">
                     <textarea name="message" id="inputMessage" cols="30" rows="10" placeholder="Message" required></textarea>
                     <span>Message</span>
-                    <div class="validation">* Required</div>
+                    <!-- <div class="validation">* Required</div> -->
                 </label>
                 <button type="submit"><span>Send Message</span></button>
             </form>
         </div>
         <div class="div__img">
-            <h2>Lets get in touch!</h2>
+            <h2>Let's get in touch!</h2>
             <p>If you are interested in work with me or just talk you can email<br/> me or contact me throught one of the social medias below.</p>
             <img src="./img/undraw_personal_email_re_4lx7 (1).svg" alt="contactImg">
         </div>
@@ -73,5 +74,4 @@
         </div>
     </footer>
 </body>
-<script src="./main.js"></script>
 </html>
