--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>Portfolio</title>
+    <script type="text/javascript" src="./main.js"></script>
+    <title>Emmanuel Gomez's Portfolio</title>
 </head>
 <body>
     <header>
@@ -13,28 +14,28 @@
             <ul>
                 <li>
                     <a href="./index.html">
-                        <span><img src="./img/home icon.svg" alt="home"></span>
+                        <span><img src="./img/homeIcon.svg" alt="home"></span>
                         Home
                     </a>
                 </li>
                 <li>
                     <a href="./_about.html">
-                        <span><img src="./img/about icon.svg" alt="about"></span>
+                        <span><img src="./img/aboutIcon.svg" alt="about"></span>
                         About
                     </a>
                 </li>
                 <li>
                     <a href="./_works.html">
-                        <span><img src="./img/work icon.svg" alt="work"></span>
+                        <span><img src="./img/workIcon.svg" alt="work"></span>
                         Works
                     </a>
                 </li>
             </ul>
         </nav>
     </header>
-    <section class="section--home" id="home">
+    <section class="section__home" id="home">
         <h1>Welcome to my website portfolio</h1>
-        <p>This is where i’m gonna put all my works and some ideas that i want to share with de world. Also i’m gonna put som of my social medias so we can get in touch.</p>
+        <p>This is where i’m gonna put all my works and some ideas that i want to share with the world. Below you are gonna find some of my social medias so we can get in touch.</p>
     </section>
     <footer>
         <p>Emmanuel Gomez 2022 © All rights reserved.</p>
@@ -46,5 +47,4 @@
         </div>
     </footer>
 </body>
-<script src="./main.js"></script>
 </html>
