--- a/_about.html
+++ b/_about.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <script type="text/javascript" src="./main.js"></script>
     <title>About Me</title>
 </head>
 <body>
@@ -60,5 +59,6 @@
             <a href="https://www.behance.net/emmagomez7" target="_blank" title="Behance"><img src="./img/Behance.svg" alt="Behance"></a>
         </div>
     </footer>
+    <script src="./main.js"></script>
 </body>
 </html>
