--- a/_about.html
+++ b/_about.html
@@ -35,7 +35,7 @@
     <section class="section__about" id="about">
         <div>
             <h2>Who I am</h2>
-            <img src="./img/undraw_hello_re_3evm.svg" alt="about-mobile">
+            <img src="./img/undraw_hello_re_3evm.svg" alt="about-img_mobile" title="image from unDraw">
             <p>
                 Hey! I am Emmanuel Gomez, a 22 year old React frontend developer who is discovering the world of web development. I started this road almost a year ago and it’s been an awesome time working and learning about this amazing career.    
             </p>
@@ -48,7 +48,7 @@
             <h4>If you are interested on collaborating or just talk </h4>
             <a href="./_contact.html"><button id="contactButton"><span>Start a conversation</span></button></a>
         </div>
-        <img src="./img/undraw_hello_re_3evm.svg" alt="about">
+        <img src="./img/undraw_hello_re_3evm.svg" alt="about-img" title="image from unDraw">
     </section>
     <footer>
         <p>Emmanuel Gomez 2022 © All rights reserved.</p>
