--- a/_contact.html
+++ b/_contact.html
@@ -60,7 +60,7 @@
         <div class="div__img">
             <h2>Let's get in touch!</h2>
             <p>If you are interested in work with me or just talk you can email<br/> me or contact me throught one of the social medias below.</p>
-            <img src="./img/undraw_personal_email_re_4lx7 (1).svg" alt="contactImg">
+            <img src="./img/undraw_personal_email_re_4lx7 (1).svg" alt="contactImg" title="image from unDraw">
         </div>
     </section>
     <footer>
