--- a/_works.html
+++ b/_works.html
@@ -40,10 +40,14 @@
                     <h4>Landing Page</h4>
                     <p>Single page made it with React.js, personalized with Sass preprocessor and Bootstrap. The contact form connects you, through axios, with an Api that sends you a confirmation email.</p>
                 </div>
-                <a href="https://egmyapp.herokuapp.com/" target="_blank"><img src="./img/9e3bd8127399839.614113df90751.png" alt="projectImg"></a>
+                <a href="https://egmyapp.herokuapp.com/" target="_blank">
+                    <img src="./img/9e3bd8127399839.614113df90751.png" alt="projectImg">
+                </a>
             </div>
             <div class="works__div--left">
-                <a href="https://egmundoseapi.herokuapp.com/" target="_blank"><img src="./img/Api mundosE.png" alt="soonImg"></a>
+                <a href="https://egmundoseapi.herokuapp.com/" target="_blank">
+                    <img src="./img/Api mundosE.png" alt="soonImg">
+                </a>
                 <div class="works__img--left">
                     <h4>Api</h4>
                     <p>This Api let you send a confirmation email and save the data in a database for whoever use a form. It's made it in PHP, especifically through the Laravel framework.</p>
@@ -54,10 +58,10 @@
                     <h4>Simple Calculator</h4>
                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet lacus, tincidunt metus, morbi. Dolor metus, penatibus neque, consequat. Rutrum porttitor vestibulum morbi odio ut donec.</p> -->
                 </div>
-                <a><img src="./img/SoonImg.png" alt="soonImg" class="img--disable"></a>
+                <a class="img--disable"><img src="./img/SoonImg.png" alt="soonImg"></a>
             </div>
             <div class="works__div--left">
-                <a><img src="./img/SoonImg.png" alt="soonImg" class="img--disable"></a>
+                <a class="img--disable"><img src="./img/SoonImg.png" alt="soonImg"></a>
                 <div class="works__img--left">
                     <h4>To do List</h4>
                     <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet lacus, tincidunt metus, morbi. Dolor metus, penatibus neque, consequat. Rutrum porttitor vestibulum morbi odio ut donec.</p> -->
