--- a/_about.html
+++ b/_about.html
@@ -37,7 +37,7 @@
             <h2>Who I am</h2>
             <img src="./img/undraw_hello_re_3evm.svg" alt="about-img_mobile" title="image from unDraw">
             <p>
-                Hey! I am Emmanuel Gomez, a 22 year old React frontend developer who is discovering the world of web development. I started this road almost a year ago and it’s been an awesome time working and learning about this amazing career.    
+                Hey! I am Emmanuel Gomez, a 22 year old React frontend developer who is discovering the world of web development. I started this road more than a year ago and it’s been an awesome time working and learning about this amazing career.    
             </p>
             <p>
                 I'm trying to help people making life easier through the browser, working with designers and bringing ideas to life. I’m naturally curious and always learning something.
