--- a/_works.html
+++ b/_works.html
@@ -41,12 +41,12 @@
                     <p>Single page made it with React.js, personalized with Sass preprocessor and Bootstrap. The contact form connects you, through axios, with an Api that sends you a confirmation email.</p>
                 </div>
                 <a href="https://egmyapp.herokuapp.com/" target="_blank">
-                    <img src="./img/9e3bd8127399839.614113df90751.png" alt="projectImg">
+                    <img src="./img/9e3bd8127399839.614113df90751.png" alt="Landing page image">
                 </a>
             </div>
             <div class="works__div--left">
                 <a href="https://egmundoseapi.herokuapp.com/" target="_blank">
-                    <img src="./img/Api mundosE.png" alt="soonImg">
+                    <img src="./img/ApiMundosE.png" alt="Api project image">
                 </a>
                 <div class="works__img--left">
                     <h4>Api</h4>
@@ -56,9 +56,9 @@
             <div class="works__div--right">
                 <div class="works__img--right">
                     <h4>Simple Calculator</h4>
-                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet lacus, tincidunt metus, morbi. Dolor metus, penatibus neque, consequat. Rutrum porttitor vestibulum morbi odio ut donec.</p> -->
+                    <p>Simple calculator made it with HTML5, Sass preprocessor and vanilla Javascript. It let you make simple operations and shows you the result in a easy and efficient way.</p>
                 </div>
-                <a class="img--disable"><img src="./img/SoonImg.png" alt="soonImg"></a>
+                <a href="https://eg-calculator.herokuapp.com/" target="_blank"><img src="./img/SimpleCalculator.png" alt="Simple calculator image"></a>
             </div>
             <div class="works__div--left">
                 <a class="img--disable"><img src="./img/SoonImg.png" alt="soonImg"></a>
