--- a/_about.html
+++ b/_about.html
@@ -59,6 +59,6 @@
             <a href="https://www.behance.net/emmagomez7" target="_blank" title="Behance"><img src="./img/Behance.svg" alt="Behance"></a>
         </div>
     </footer>
-    <script src="./main.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
