--- a/_works.html
+++ b/_works.html
@@ -39,6 +39,10 @@
                 <div class="works__img--right">
                     <h4>Landing Page</h4>
                     <p>Single page made it with React.js, personalized with Sass preprocessor and Bootstrap. The contact form connects you, through axios, with an Api that sends you a confirmation email.</p>
+                    <a href="https://github.com/Emmago13/MundosE/tree/master/my-app" target="_blank" class="img--disable">
+                        <p>Check the code</p>
+                        <img src="./img/arrow-right-solid.svg" alt="Arrow right">
+                    </a>
                 </div>
                 <a href="https://egmyapp.herokuapp.com/" target="_blank">
                     <img src="./img/9e3bd8127399839.614113df90751.png" alt="Landing page image">
@@ -51,20 +55,32 @@
                 <div class="works__img--left">
                     <h4>Api</h4>
                     <p>This Api let you send a confirmation email and save the data in a database for whoever use a form. It's made it in PHP, especifically through the Laravel framework.</p>
+                    <a href="https://github.com/Emmago13/MundosE-backend" target="_blank" class="img--disable">
+                        <p>Check the code</p>
+                        <img src="./img/arrow-right-solid.svg" alt="Arrow right">
+                    </a>
                 </div>
             </div>
             <div class="works__div--right">
                 <div class="works__img--right">
                     <h4>Simple Calculator</h4>
                     <p>Simple calculator made it with HTML5, Sass preprocessor and vanilla Javascript. It let you make simple operations and shows you the result in a easy and efficient way.</p>
+                    <a href="https://github.com/Emmago13/Calculator" target="_blank" class="img--disable">
+                        <p>Check the code</p>
+                        <img src="./img/arrow-right-solid.svg" alt="Arrow right">
+                    </a>
                 </div>
                 <a href="https://eg-calculator.herokuapp.com/" target="_blank"><img src="./img/SimpleCalculator.png" alt="Simple calculator image"></a>
             </div>
             <div class="works__div--left">
-                <a class="img--disable"><img src="./img/SoonImg.png" alt="soonImg"></a>
+                <a href="https://eg-shopcart.herokuapp.com/" target="_blank"><img src="./img/ShopCart.png" alt="Photography Shop Cart"></a>
                 <div class="works__img--left">
-                    <h4>To do List</h4>
-                    <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet lacus, tincidunt metus, morbi. Dolor metus, penatibus neque, consequat. Rutrum porttitor vestibulum morbi odio ut donec.</p> -->
+                    <h4>Photography Store</h4>
+                    <p>Photography shopping cart that let's you select, modify the quantity and delete the diferents elementes in the store. Made it with HTML5, Css3 and vanilla Javascript.</p>
+                    <a href="https://github.com/Emmago13/Shop-Cart" target="_blank" class="img--disable">
+                        <p>Check the code</p>
+                        <img src="./img/arrow-right-solid.svg" alt="Arrow right">
+                    </a>
                 </div>
             </div>
         </div>
