--- a/_contact.html
+++ b/_contact.html
@@ -9,25 +9,21 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="./index.html">
-                        <span><img src="./img/homeIcon.svg" alt="home"></span>
-                        Home
-                    </a>
+        <div class="menu__icon">
+            <span class="menu__icon--line menu__line--left"></span>
+            <span class="menu__icon--line"></span>
+            <span class="menu__icon--line menu__line--right"></span>
+        </div>
+        <nav class="nav">
+            <ul class="nav__content">
+                <li class="nav__list-item">
+                    <a href="./index.html">Home</a>
                 </li>
-                <li>
-                    <a href="./_about.html">
-                        <span><img src="./img/aboutIcon.svg" alt="about"></span>
-                        About
-                    </a>
+                <li class="nav__list-item">
+                    <a href="./_about.html">About</a>
                 </li>
-                <li>
-                    <a href="./_works.html">
-                        <span><img src="./img/workIcon.svg" alt="work"></span>
-                        Works
-                    </a>
+                <li class="nav__list-item">
+                    <a href="./_works.html">Projects</a>
                 </li>
             </ul>
         </nav>
