--- a/index.html
+++ b/index.html
@@ -9,31 +9,27 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li>
-                    <a href="./index.html">
-                        <span><img src="./img/homeIcon.svg" alt="home"></span>
-                        Home
-                    </a>
+        <div class="menu__icon">
+            <span class="menu__icon--line menu__line--left"></span>
+            <span class="menu__icon--line"></span>
+            <span class="menu__icon--line menu__line--right"></span>
+        </div>
+        <nav class="nav">
+            <ul class="nav__content">
+                <li class="nav__list-item">
+                    <a href="./index.html">Home</a>
                 </li>
-                <li>
-                    <a href="./_about.html">
-                        <span><img src="./img/aboutIcon.svg" alt="about"></span>
-                        About
-                    </a>
+                <li class="nav__list-item">
+                    <a href="./_about.html">About</a>
                 </li>
-                <li>
-                    <a href="./_works.html">
-                        <span><img src="./img/workIcon.svg" alt="work"></span>
-                        Works
-                    </a>
+                <li class="nav__list-item">
+                    <a href="./_works.html">Projects</a>
                 </li>
             </ul>
         </nav>
     </header>
     <section class="section__home" id="home">
-        <h1>Welcome to my website portfolio</h1>
+        <h1>Welcome to my portfolio</h1>
         <p>This is where i’m gonna put all my works and some ideas that i want to share with the world. Below you are gonna find some of my social medias so we can get in touch.</p>
     </section>
     <footer>
