--- a/_about.html
+++ b/_about.html
@@ -8,21 +8,21 @@
     <title>About Me</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="menu__icon">
-            <span class="menu__icon--line menu__line--left"></span>
-            <span class="menu__icon--line"></span>
-            <span class="menu__icon--line menu__line--right"></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
-        <nav class="nav">
-            <ul class="nav__content">
-                <li class="nav__list-item">
+        <nav>
+            <ul>
+                <li>
                     <a href="./index.html">Home</a>
                 </li>
-                <li class="nav__list-item">
+                <li>
                     <a href="./_about.html">About</a>
                 </li>
-                <li class="nav__list-item">
+                <li>
                     <a href="./_works.html">Projects</a>
                 </li>
             </ul>
